--- a/vignettes/introduction-to-rwa.Rmd
+++ b/vignettes/introduction-to-rwa.Rmd
@@ -152,6 +152,9 @@ if (has_ggplot2) {
         predictors = c("cyl", "disp", "hp", "gear", "wt"),
         plot = TRUE)
 
+  # Print the plot
+  plot_result
+
   # The plot shows rescaled relative weights
   plot_result$result
 } else {
@@ -351,6 +354,7 @@ ci_data %>%
 ### 4. Reporting Results
 
 When reporting RWA results, include:
+
 - **Sample size** and missing data handling
 - **Bootstrap parameters** (if used)
 - **Raw and rescaled weights**
@@ -394,14 +398,17 @@ print(missing_summary)
 This package and methodology are based on the following key references:
 
 **Primary Sources:**
+
 - **Johnson, J. W. (2000)**. A heuristic method for estimating the relative weight of predictor variables in multiple regression. *Multivariate Behavioral Research*, 35(1), 1-19. DOI: 10.1207/S15327906MBR3501_1
 
 - **Tonidandel, S., & LeBreton, J. M. (2015)**. RWA Web: A free, comprehensive, web-based, and user-friendly tool for relative weight analyses. *Journal of Business and Psychology*, 30(2), 207-216. DOI: 10.1007/s10869-014-9351-z
 
 **Bootstrap Methods:**
+
 - **Tonidandel, S., LeBreton, J. M., & Johnson, J. W. (2009)**. Determining the statistical significance of relative weights. *Psychological Methods*, 14(4), 387-399.
 
 **Additional Reading:**
+
 - Azen, R., & Budescu, D. V. (2003). The dominance analysis approach for comparing predictors in multiple regression. *Psychological Methods*, 8(2), 129-148.
 
 - Grömping, U. (2006). Relative importance for linear regression in R: The package relaimpo. *Journal of Statistical Software*, 17(1), 1-27.
