--- a/vignettes/introduction-to-rwa.Rmd
+++ b/vignettes/introduction-to-rwa.Rmd
@@ -164,89 +164,33 @@ if (has_ggplot2) {
 
 ## Bootstrap Confidence Intervals
 
-One of the most powerful features of the `rwa` package is the ability to calculate bootstrap confidence intervals for relative weights, addressing the long-standing issue of statistical significance testing in RWA.
+The `rwa` package includes powerful bootstrap functionality for determining the statistical significance of relative weights. For detailed coverage of bootstrap methods, see the dedicated vignette:
 
-### Why Bootstrap for RWA?
-
-As noted by Tonidandel et al. (2009):
-
-> "The difficulty in determining the statistical significance of relative weights stems from the fact that the exact (or small sample) sampling distribution of relative weights is unknown."
-
-Bootstrap methods provide a solution by empirically estimating the sampling distribution of relative weights.
-
-### Basic Bootstrap Analysis
-
-```{r bootstrap-basic}
-# Bootstrap analysis with 1000 samples
-result_bootstrap <- mtcars %>%
-  rwa(outcome = "mpg",
-      predictors = c("cyl", "disp", "hp", "gear"),
-      bootstrap = TRUE,
-      n_bootstrap = 1000,
-      conf_level = 0.95)
-
-# View results with confidence intervals
-result_bootstrap$result
+```{r eval=FALSE}
+vignette("bootstrap-confidence-intervals", package = "rwa")
 ```
 
-### Understanding Bootstrap Results
+### Quick Bootstrap Example
 
-The bootstrap analysis adds several columns to the results:
-
-- **Raw.RelWeight.CI.Lower/Upper**: 95% confidence intervals for raw weights
-- **Raw.Significant**: Whether the weight is significantly different from zero
-
-```{r bootstrap-interpretation}
-# Bootstrap-specific information
-result_bootstrap$bootstrap$n_bootstrap
-result_bootstrap$bootstrap$ci_results$raw_weights
-
-# Identify significant predictors
-significant_vars <- result_bootstrap$result %>%
-  filter(Raw.Significant == TRUE) %>%
-  pull(Variables)
-
-cat("Significant predictors:", paste(significant_vars, collapse = ", "))
-```
-
-### Comprehensive Bootstrap Analysis
-
-For more detailed analysis, you can request comprehensive bootstrap results:
-
-```{r bootstrap-comprehensive}
-# Comprehensive bootstrap with focal variable comparison
-result_comprehensive <- mtcars %>%
-  rwa(outcome = "mpg",
-      predictors = c("cyl", "disp", "hp", "gear", "wt"),
-      bootstrap = TRUE,
-      comprehensive = TRUE,
-      focal = "wt",  # Compare other variables to weight
-      n_bootstrap = 500)  # Fewer samples for speed
-
-# Access detailed bootstrap results
-result_comprehensive$bootstrap$ci_results
-```
-
-### Working with Rescaled Weight Confidence Intervals
-
-**Important Note**: Rescaled weight confidence intervals should be interpreted with caution due to compositional data constraints. They are not recommended for formal statistical inference.
-
-```{r rescaled-ci-warning}
-# Rescaled CIs (use with caution)
-result_rescaled_ci <- mtcars %>%
+```{r bootstrap-example}
+# Basic bootstrap analysis
+bootstrap_result <- mtcars %>%
   rwa(outcome = "mpg",
       predictors = c("cyl", "disp", "hp"),
       bootstrap = TRUE,
-      include_rescaled_ci = TRUE,
-      n_bootstrap = 500)
+      n_bootstrap = 500)  # Reduced for speed
 
-# Note the warning message about interpretation
-result_rescaled_ci$result
+# View significant predictors
+bootstrap_result$result %>%
+  filter(Raw.Significant == TRUE) %>%
+  select(Variables, Rescaled.RelWeight, Raw.RelWeight.CI.Lower, Raw.RelWeight.CI.Upper)
 ```
+
+For comprehensive coverage of bootstrap methods, advanced features, and best practices, consult the bootstrap vignette.
 
 ## Real-World Example: Diamond Price Analysis
 
-Let's explore a more complex example using the `diamonds` dataset to understand what drives diamond prices:
+Let's explore a more complex example using the `diamonds` dataset:
 
 ```{r diamonds-example, eval = has_ggplot2}
 # Analyze diamond price drivers (only if ggplot2 is available)
@@ -258,9 +202,7 @@ if (has_ggplot2) {
   diamond_rwa <- diamonds_subset %>%
     rwa(outcome = "price",
         predictors = c("carat", "depth", "table", "x", "y", "z"),
-        bootstrap = TRUE,
-        applysigns = TRUE,
-        n_bootstrap = 500)
+        applysigns = TRUE)
 
   diamond_rwa$result
 } else {
@@ -268,20 +210,9 @@ if (has_ggplot2) {
 }
 ```
 
-### Interpreting Diamond Price Drivers
-
-```{r diamonds-interpretation, eval = has_ggplot2}
-if (has_ggplot2) {
-  # Rank predictors by importance
-  diamond_importance <- diamond_rwa$result %>%
-    arrange(desc(Rescaled.RelWeight)) %>%
-    select(Variables, Rescaled.RelWeight, Sign.Rescaled.RelWeight, Raw.Significant)
-
-  print(diamond_importance)
-
-  # Model explains this much variance:
-  cat("R-squared:", round(diamond_rwa$rsquare, 3))
-}
+For bootstrap analysis of this example with confidence intervals, see:
+```{r eval=FALSE}
+vignette("bootstrap-confidence-intervals", package = "rwa")
 ```
 
 ## Comparison with Traditional Regression
@@ -311,8 +242,6 @@ print(comparison)
 
 ### 1. Sample Size Considerations
 
-For bootstrap analysis, ensure adequate sample size:
-
 ```{r sample-size}
 # Check your sample size
 n_obs <- mtcars %>% 
@@ -321,42 +250,27 @@ n_obs <- mtcars %>%
   nrow()
 
 cat("Sample size:", n_obs)
-cat("\nRecommended bootstrap samples:", min(1000, n_obs * 10))
+cat("\nRule of thumb: At least 5 observations per predictor")
 ```
 
 ### 2. Variable Selection
 
 RWA works best with:
 - **Continuous variables** (though categorical can be used with caution)
-- **Theoretically meaningful predictors**
+- **Theoretically meaningful predictors**  
 - **Reasonable predictor-to-observation ratios**
 
-### 3. Interpreting Confidence Intervals
-
-```{r ci-interpretation}
-# Focus on raw weight confidence intervals for inference
-ci_data <- result_bootstrap$bootstrap$ci_results$raw_weights
-print(head(ci_data))
-
-# Add interpretation based on available columns
-ci_data %>%
-  mutate(
-    significant = ci_lower > 0 | ci_upper < 0,
-    ci_width = ci_upper - ci_lower,
-    precision = case_when(
-      ci_width < 0.05 ~ "High precision",
-      ci_width < 0.15 ~ "Medium precision", 
-      TRUE ~ "Low precision"
-    )
-  )
-```
-
-### 4. Reporting Results
+### 3. Reporting Results
 
 When reporting RWA results, include:
-
 - **Sample size** and missing data handling
-- **Bootstrap parameters** (if used)
+- **Raw and rescaled weights**
+- **Model R-squared**
+
+For bootstrap confidence intervals and advanced statistical considerations, see:
+```{r eval=FALSE}
+vignette("bootstrap-confidence-intervals", package = "rwa")
+```
 - **Raw and rescaled weights**
 - **Confidence intervals** for key predictors
 - **Model R-squared**
@@ -398,27 +312,28 @@ print(missing_summary)
 This package and methodology are based on the following key references:
 
 **Primary Sources:**
-
 - **Johnson, J. W. (2000)**. A heuristic method for estimating the relative weight of predictor variables in multiple regression. *Multivariate Behavioral Research*, 35(1), 1-19. DOI: 10.1207/S15327906MBR3501_1
 
 - **Tonidandel, S., & LeBreton, J. M. (2015)**. RWA Web: A free, comprehensive, web-based, and user-friendly tool for relative weight analyses. *Journal of Business and Psychology*, 30(2), 207-216. DOI: 10.1007/s10869-014-9351-z
 
-**Bootstrap Methods:**
-
-- **Tonidandel, S., LeBreton, J. M., & Johnson, J. W. (2009)**. Determining the statistical significance of relative weights. *Psychological Methods*, 14(4), 387-399.
-
 **Additional Reading:**
-
 - Azen, R., & Budescu, D. V. (2003). The dominance analysis approach for comparing predictors in multiple regression. *Psychological Methods*, 8(2), 129-148.
 
 - Grömping, U. (2006). Relative importance for linear regression in R: The package relaimpo. *Journal of Statistical Software*, 17(1), 1-27.
 
 - Johnson, J. W., & LeBreton, J. M. (2004). History and use of relative importance indices in organizational research. *Organizational Research Methods*, 7(3), 238-257.
 
-For the latest methodological developments and detailed technical information, see: https://relativeimportance.davidson.edu/
+For bootstrap methods and statistical significance testing, see the dedicated bootstrap vignette and its references.
+
+For the latest methodological developments: https://relativeimportance.davidson.edu/
 
 ## Conclusion
 
-The `rwa` package provides a comprehensive, user-friendly implementation of Relative Weights Analysis in R. With features including bootstrap confidence intervals, sign application, and seamless integration with tidyverse workflows, it offers researchers and analysts a robust tool for understanding predictor variable importance in the presence of multicollinearity.
+The `rwa` package provides a user-friendly implementation of Relative Weights Analysis in R with seamless tidyverse integration. This introductory vignette covered the basic methodology and usage patterns.
+
+For advanced features including bootstrap confidence intervals and statistical significance testing, see:
+```{r eval=FALSE}
+vignette("bootstrap-confidence-intervals", package = "rwa")
+```
 
 Whether you're conducting key drivers analysis in market research, exploring variable importance in predictive modeling, or addressing multicollinearity in academic research, RWA provides valuable insights that complement traditional regression approaches.
