--- a/vignettes/bootstrap-confidence-intervals.Rmd
+++ b/vignettes/bootstrap-confidence-intervals.Rmd
@@ -24,15 +24,7 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(rwa)
 library(dplyr)
-
-# Load ggplot2 if available, otherwise skip plotting examples
-if (requireNamespace("ggplot2", quietly = TRUE)) {
-  library(ggplot2)
-  has_ggplot2 <- TRUE
-} else {
-  has_ggplot2 <- FALSE
-  message("ggplot2 not available - skipping plotting examples")
-}
+library(ggplot2)
 ```
 
 ## Introduction
@@ -166,41 +158,35 @@ Rescaled weights are **compositional data** (they sum to 100%), which creates de
 
 ### Diamond Price Analysis
 
-```{r diamonds-example, eval = has_ggplot2}
-# Analyze diamond price drivers (only if ggplot2 is available)
-if (has_ggplot2) {
-  diamonds_subset <- diamonds %>%
-    select(price, carat, depth, table, x, y, z) %>%
-    sample_n(1000)  # Sample for faster computation
+```{r diamonds-example}
+# Analyze diamond price drivers
+diamonds_subset <- diamonds %>%
+  select(price, carat, depth, table, x, y, z) %>%
+  sample_n(1000)  # Sample for faster computation
 
-  diamond_rwa <- diamonds_subset %>%
-    rwa(outcome = "price",
-        predictors = c("carat", "depth", "table", "x", "y", "z"),
-        bootstrap = TRUE,
-        applysigns = TRUE,
-        n_bootstrap = 500)
+diamond_rwa <- diamonds_subset %>%
+  rwa(outcome = "price",
+      predictors = c("carat", "depth", "table", "x", "y", "z"),
+      bootstrap = TRUE,
+      applysigns = TRUE,
+      n_bootstrap = 500)
 
-  print(diamond_rwa$result)
-} else {
-  cat("Note: Diamond example requires ggplot2 package for the diamonds dataset.")
-}
+print(diamond_rwa$result)
 ```
 
 ### Interpreting Results
 
-```{r diamonds-interpretation, eval = has_ggplot2}
-if (has_ggplot2) {
-  # Focus on significant predictors
-  significant_drivers <- diamond_rwa$result %>%
-    filter(Raw.Significant == TRUE) %>%
-    arrange(desc(Rescaled.RelWeight)) %>%
-    select(Variables, Rescaled.RelWeight, Sign.Rescaled.RelWeight)
+```{r diamonds-interpretation}
+# Focus on significant predictors
+significant_drivers <- diamond_rwa$result %>%
+  filter(Raw.Significant == TRUE) %>%
+  arrange(desc(Rescaled.RelWeight)) %>%
+  select(Variables, Rescaled.RelWeight, Sign.Rescaled.RelWeight)
 
-  cat("Significant diamond price drivers:\n")
-  print(significant_drivers)
+cat("Significant diamond price drivers:\n")
+print(significant_drivers)
 
-  cat("\nModel R-squared:", round(diamond_rwa$rsquare, 3))
-}
+cat("\nModel R-squared:", round(diamond_rwa$rsquare, 3))
 ```
 
 ## Best Practices
