Add sort parameter to rwa() for CRAN preparation
- Add sort parameter (default TRUE) to automatically sort results by importance
- Results sorted by Rescaled.RelWeight in descending order by default
- Set sort=FALSE to preserve original predictor order
- Update documentation and examples to demonstrate sorting feature
- Update vignettes to reflect new default sorting behavior
- Remove manual arrange() calls in vignettes since sorting is now automatic
- Update NEWS.md with new feature documentation

Prepares package for CRAN submission with improved user experience.

--- a/vignettes/bootstrap-confidence-intervals.Rmd
+++ b/vignettes/bootstrap-confidence-intervals.Rmd
@@ -177,13 +177,12 @@ print(diamond_rwa$result)
 ### Interpreting Results
 
 ```{r diamonds-interpretation}
-# Focus on significant predictors
+# Focus on significant predictors (results are already sorted by importance)
 significant_drivers <- diamond_rwa$result %>%
   filter(Raw.Significant == TRUE) %>%
-  arrange(desc(Rescaled.RelWeight)) %>%
   select(Variables, Rescaled.RelWeight, Sign.Rescaled.RelWeight)
 
-cat("Significant diamond price drivers:\n")
+cat("Significant diamond price drivers (sorted by importance):\n")
 print(significant_drivers)
 
 cat("\nModel R-squared:", round(diamond_rwa$rsquare, 3))
