docs: organize vignettes

--- a/vignettes/introduction-to-rwa.Rmd
+++ b/vignettes/introduction-to-rwa.Rmd
@@ -29,7 +29,7 @@ library(ggplot2)
 
 ## Introduction
 
-**Relative Weights Analysis (RWA)** is a powerful method for determining the relative importance of predictor variables in multiple regression models, particularly when dealing with multicollinearity. This vignette provides a comprehensive guide to using the `rwa` package, explaining the methodology, interpreting results, and exploring advanced features including bootstrap confidence intervals.
+**Relative Weights Analysis (RWA)** is a powerful method for determining the relative importance of predictor variables in multiple regression models, particularly when dealing with multicollinearity. This vignette provides a comprehensive guide to using the `rwa` package, explaining the methodology, interpreting results, exploring advanced features, and evaluating the theoretical foundations and validity of the method.
 
 ## Background and Methodology
 
@@ -59,6 +59,82 @@ RWA is particularly useful when:
 - **Traditional regression coefficients** are unstable or difficult to interpret
 - You want to understand **proportional contributions** to explained variance
 - Conducting **key drivers analysis** in market research or business analytics
+
+## Theoretical Foundation and Methodological Evaluation
+
+### Core Methodological Insight
+
+RWA addresses multicollinearity by attributing **shared (collinear) variance between predictors** to those predictors in proportion to their structure with the outcome. Unlike traditional regression coefficients that reflect only unique contributions, RWA considers both **direct and indirect (shared) effects**.
+
+The **Johnson (2000)** algorithm performs an **eigenvalue decomposition** of the predictor correlation matrix to create uncorrelated principal components, then regresses the outcome on these components. This procedure yields weights virtually identical to what would be obtained by averaging a predictor's incremental R² contribution over _all possible subsets_ of predictors (the logic used in dominance analysis), but **without brute-force search** over subsets, making it computationally efficient.
+
+### Demonstrating RWA's Theoretical Properties
+
+Let's demonstrate this with a controlled example where we know the true relationships:
+
+```{r theoretical-demonstration}
+# Create controlled scenario to demonstrate RWA's theoretical properties
+set.seed(123)
+n <- 200
+
+# Generate predictors with known correlation structure
+x1 <- rnorm(n)
+x2 <- 0.7 * x1 + 0.3 * rnorm(n)  # r ≈ 0.7 with x1
+x3 <- 0.5 * x1 + 0.8 * rnorm(n)  # r ≈ 0.5 with x1
+x4 <- rnorm(n)                    # Independent
+
+# True population model with known coefficients
+y <- 0.6 * x1 + 0.4 * x2 + 0.3 * x3 + 0.2 * x4 + rnorm(n, sd = 0.5)
+
+theory_data <- data.frame(y = y, x1 = x1, x2 = x2, x3 = x3, x4 = x4)
+
+# Compare traditional regression vs RWA
+lm_theory <- lm(y ~ x1 + x2 + x3 + x4, data = theory_data)
+rwa_theory <- rwa(theory_data, "y", c("x1", "x2", "x3", "x4"))
+
+# Show how multicollinearity affects traditional coefficients
+cat("True population contributions (designed into simulation):\n")
+true_contributions <- c(0.6, 0.4, 0.3, 0.2)
+names(true_contributions) <- c("x1", "x2", "x3", "x4")
+print(true_contributions)
+
+cat("\nStandardized regression coefficients (distorted by multicollinearity):\n")
+std_betas <- summary(lm_theory)$coefficients[2:5, "Estimate"]
+names(std_betas) <- c("x1", "x2", "x3", "x4")
+print(round(std_betas, 3))
+
+cat("\nRWA weights (better reflect true importance despite correlations):\n")
+rwa_weights_theory <- rwa_theory$result$Raw.RelWeight
+names(rwa_weights_theory) <- rwa_theory$result$Predictors
+print(round(rwa_weights_theory, 3))
+
+# Calculate correlation between methods and true values
+cor_with_true <- data.frame(
+  Method = c("Std_Betas", "RWA_Weights"),
+  Correlation_with_True = c(
+    cor(abs(std_betas), true_contributions),
+    cor(rwa_weights_theory[names(true_contributions)], true_contributions)
+  )
+)
+print("Correlation with true population values:")
+print(cor_with_true)
+```
+
+### Current Validity: Why RWA Remains Relevant
+
+**RWA remains a widely accepted and useful method for evaluating predictor importance under multicollinearity.** Since its introduction, numerous studies have validated that RWA provides a fair assessment of each variable's importance even in high-correlation settings.
+
+**Evidence from research practice:**
+- **Organizational Psychology**: Determining which employee factors predict performance when intercorrelated
+- **Marketing Research**: Key driver analysis where product attributes tend to move together  
+- **Educational Research**: Assessing cognitive abilities that naturally correlate
+- **Healthcare Analytics**: Understanding risk factors that often co-occur
+
+**Methodological validation:**
+1. **RWA reveals important predictors** that regression beta weights obscure due to multicollinearity
+2. **Rankings from RWA correlate > 0.99** with dominance analysis in most scenarios
+3. **Bootstrap confidence intervals** provide robust significance testing
+4. **Computational efficiency** allows analysis of large predictor sets
 
 ## Basic Usage
 
@@ -243,6 +319,85 @@ comparison <- data.frame(
 print(comparison)
 ```
 
+### Methodological Advantages of RWA
+
+#### 1. Superior to Standard Regression Under Multicollinearity
+
+Traditional standardized beta coefficients reflect **unique contribution holding others constant**, which severely underestimates variables that share variance with others. RWA gives credit to predictors for variance they share with the outcome **both individually and jointly** with other variables.
+
+#### 2. Avoids Stepwise Selection Problems
+
+Stepwise methods arbitrarily pick one variable from a collinear set and drop others, potentially leading to incorrect conclusions about importance. Unlike stepwise selection, **RWA does not throw away information** – it shows how much each predictor contributes given the complete set.
+
+#### 3. More Interpretable than Principal Components
+
+While PCA addresses multicollinearity, it **buries the identity of individual predictors** in composite factors. RWA uses orthogonalization behind the scenes but **returns results in terms of original predictors**, maintaining interpretability.
+
+#### 4. Computational Efficiency vs. Dominance Analysis
+
+RWA's greatest achievement is producing **almost identical results to dominance analysis but far more efficiently**. Research shows:
+
+- **Correlation > 0.99** between RWA and dominance analysis rankings
+- **Exponential time savings**: dominance analysis requires 2^p models; RWA solves equations directly
+- **Enhanced capabilities**: easier to provide confidence intervals and significance tests
+
+```{r efficiency-demonstration}
+# Demonstrate computational considerations
+predictors <- c("cyl", "disp", "hp", "gear")
+n_predictors <- length(predictors)
+
+cat("Number of predictors:", n_predictors, "\n")
+cat("Dominance analysis would require", 2^n_predictors, "subset models\n")
+cat("RWA solves this in a single matrix operation\n")
+
+# Show RWA speed (for demonstration)
+start_time <- Sys.time()
+rwa_speed_test <- mtcars %>% rwa(outcome = "mpg", predictors = predictors)
+end_time <- Sys.time()
+cat("RWA computation time:", round(as.numeric(end_time - start_time, units = "secs"), 4), "seconds\n")
+```
+
+## Critical Limitations and When to Exercise Caution
+
+### 1. Not a Replacement for Theory
+
+**RWA is fundamentally a descriptive, variance-partitioning tool.** It tells us "how much prediction was attributable to X" but **does not imply causation**. As Tonidandel & LeBreton emphasize: relative weights **"are not causal indicators and thus do not necessarily dictate a course of action."**
+
+RWA should enhance interpretation of regression models but decisions must still be guided by substantive theory.
+
+### 2. The Redundancy Problem
+
+**RWA is not a magic bullet for extreme multicollinearity stemming from redundant predictors.** When predictors measure essentially the same construct, RWA will split the contribution between them, potentially making each appear less important individually.
+
+```{r redundancy-demonstration}
+# Demonstrate the redundancy limitation
+set.seed(456)
+x1_orig <- rnorm(100)
+x1_dup <- x1_orig + rnorm(100, sd = 0.05)  # Nearly identical (r ≈ 0.99)
+y_simple <- 0.8 * x1_orig + rnorm(100, sd = 0.5)
+
+redundant_data <- data.frame(y = y_simple, x1_original = x1_orig, 
+                           x1_duplicate = x1_dup)
+
+cat("Correlation between 'different' predictors:", cor(x1_orig, x1_dup), "\n")
+
+# RWA correctly splits redundant variance
+redundant_rwa <- rwa(redundant_data, "y", c("x1_original", "x1_duplicate"))
+print("RWA with redundant predictors:")
+print(redundant_rwa$result)
+
+cat("\nEach variable appears less important individually,")
+cat("\nbut together they account for most variance.\n")
+cat("Combined contribution:", 
+    sum(redundant_rwa$result$Raw.RelWeight), "\n")
+```
+
+This is **statistically appropriate** – it reflects that one variable alone could do the job of both. Users must recognize that **the pair as a whole may be very important even if each alone has a modest weight.**
+
+### 3. Sample Size and Stability
+
+RWA shares multiple regression's sensitivity to **sample size and predictor-to-observation ratios.** Bootstrap confidence intervals help quantify uncertainty, but "bootstrapping will not overcome the inherent limitations associated with a small sample size."
+
 ## Best Practices and Recommendations
 
 ### 1. Sample Size Considerations
@@ -255,30 +410,43 @@ n_obs <- mtcars %>%
   nrow()
 
 cat("Sample size:", n_obs)
-cat("\nRule of thumb: At least 5 observations per predictor")
+cat("\nRule of thumb: At least 5-10 observations per predictor")
 ```
 
-### 2. Variable Selection
+### 2. Variable Selection and Model Specification
 
 RWA works best with:
 - **Continuous variables** (though categorical can be used with caution)
 - **Theoretically meaningful predictors**  
 - **Reasonable predictor-to-observation ratios**
+- **Predictors that are distinct but may be correlated**
 
-### 3. Reporting Results
+### 3. When to Use RWA vs. Alternatives
+
+**Use RWA when:**
+1. **Predictors are theoretically distinct but empirically correlated**
+2. **Understanding relative contribution (not just prediction) is the goal**
+3. **Sample size supports stable multiple regression**
+4. **Linear relationships are reasonable assumptions**
+
+**Consider alternatives when:**
+1. **Predictors are essentially redundant measures**
+2. **Sample size is very small relative to predictors**
+3. **Primary goal is variable selection rather than interpretation**
+4. **Non-linear effects are suspected**
+
+### 4. Reporting Results
 
 When reporting RWA results, include:
 - **Sample size** and missing data handling
 - **Raw and rescaled weights**
 - **Model R-squared**
+- **Confidence intervals** for key predictors (when using bootstrap)
 
 For bootstrap confidence intervals and advanced statistical considerations, see:
 ```{r eval=FALSE}
 vignette("bootstrap-confidence-intervals", package = "rwa")
 ```
-- **Raw and rescaled weights**
-- **Confidence intervals** for key predictors
-- **Model R-squared**
 
 ## Troubleshooting Common Issues
 
@@ -336,11 +504,40 @@ For the latest methodological developments: https://relativeimportance.davidson.
 
 ## Conclusion
 
-The `rwa` package provides a user-friendly implementation of Relative Weights Analysis in R with seamless tidyverse integration. This introductory vignette covered the basic methodology and usage patterns.
+The `rwa` package provides a user-friendly implementation of Relative Weights Analysis in R with seamless tidyverse integration. This vignette covered both practical implementation and theoretical foundations.
 
-For advanced features including bootstrap confidence intervals and statistical significance testing, see:
+### Key Takeaways
+
+**Methodological Strengths:**
+
+- **Handles multicollinearity effectively** by partitioning shared variance appropriately
+- **Provides interpretable results** as percentages of explained variance  
+- **Computationally efficient** compared to dominance analysis
+- **Statistically robust** with bootstrap confidence intervals
+
+**Important Limitations:**
+
+- **Not a replacement for theory** - results are descriptive, not causal
+- **Redundant predictors** will split variance, potentially appearing less important individually
+- **Sample size matters** - adequate observations needed for stable estimates
+- **Linear model assumptions** apply
+
+### When to Use RWA
+
+RWA is particularly valuable for:
+
+- **Key drivers analysis** in market research and business analytics  
+- **Multicollinear predictors** in scientific research
+- **Situations requiring interpretable importance measures**
+- **Linear models where traditional regression coefficients are misleading**
+
+### The Bottom Line
+
+RWA provides **clear, quantifiable answers to questions about predictor importance in a multicollinear world** – answers that are often obscured when using standard regression approaches. With proper understanding of its assumptions and limitations, RWA remains an essential tool for researchers and practitioners dealing with correlated predictors.
+
+Whether you're conducting key drivers analysis in market research, exploring variable importance in predictive modeling, or addressing multicollinearity in academic research, RWA provides valuable insights that complement traditional regression approaches.
+
+For advanced bootstrap methods and statistical significance testing, see:
 ```{r eval=FALSE}
 vignette("bootstrap-confidence-intervals", package = "rwa")
 ```
-
-Whether you're conducting key drivers analysis in market research, exploring variable importance in predictive modeling, or addressing multicollinearity in academic research, RWA provides valuable insights that complement traditional regression approaches.
