chore: update punctuation on vignette

--- a/vignettes/evaluating-rwa-method-reference.Rmd
+++ b/vignettes/evaluating-rwa-method-reference.Rmd
@@ -93,7 +93,7 @@ RWA, like multiple regression, relies on sample estimates of correlations and ca
 
 ### 5. Interpretation of Weights – Communication Challenges
 
-While easier to interpret than many alternatives, relative weights might still confuse audiences not familiar with them. For example, some might mistakenly think a higher weight means a variable has a higher _beta_ or a larger causal effect. It falls on the analyst to properly explain that "Variable X had a relative importance of 0.30, meaning it accounted for 30% of the explained variance in Y in our model." That interpretation – essentially as a type of "importance percentage" – tends to be intuitive once explained. In fact, rescaled relative weights (expressed as percentages of R²) are often reported for easy communication. However, one must avoid overinterpreting the exact percentages as precise in the population; they are subject to confidence intervals. Also, because the weights always sum to R², they have a **compositional nature** (an increase in one weight means a decrease in others, if R² is fixed). This means we typically shouldn't treat differences in weights as very meaningful unless they are statistically significant or large. For instance, if one predictor has 25% and another 20% of R², they might not be significantly different given sampling error. Thus, RWA users should embrace statistical tests or at least bootstrap intervals to compare weights, rather than blindly ranking tiny differences – the same caution that applies to any importance metric. Recent research (Braun et al., 2019) found that the rank ordering of predictors by importance can itself have sampling error, and recommended techniques like reporting confidence intervals for ranks or performing paired comparisons of weights. So, one limitation is that people may be tempted to over-interpret a rank ordering without regard to overlap in intervals. The remedy is good practice in reporting: give the weights, perhaps give their standard errors or CIs, and highlight only clear distinctions.
+While easier to interpret than many alternatives, relative weights might still confuse audiences not familiar with them. For example, some might mistakenly think a higher weight means a variable has a higher _beta_ or a larger causal effect. It falls on the analyst to properly explain that "Variable X had a relative importance of 0.30, meaning it accounted for 30% of the explained variance in Y in our model." That interpretation – essentially as a type of "importance percentage" – tends to be intuitive once explained. In fact, rescaled relative weights (expressed as percentages of R²) are often reported for easy communication. However, one must avoid over-interpreting the exact percentages as precise in the population; they are subject to confidence intervals. Also, because the weights always sum to R², they have a **compositional nature** (an increase in one weight means a decrease in others, if R² is fixed). This means we typically shouldn't treat differences in weights as very meaningful unless they are statistically significant or large. For instance, if one predictor has 25% and another 20% of R², they might not be significantly different given sampling error. Thus, RWA users should embrace statistical tests or at least bootstrap intervals to compare weights, rather than blindly ranking tiny differences – the same caution that applies to any importance metric. Recent research (Braun et al., 2019) found that the rank ordering of predictors by importance can itself have sampling error, and recommended techniques like reporting confidence intervals for ranks or performing paired comparisons of weights. So, one limitation is that people may be tempted to over-interpret a rank ordering without regard to overlap in intervals. The remedy is good practice in reporting: give the weights, perhaps give their standard errors or CIs, and highlight only clear distinctions.
 
 ### 6. When other methods might be considered "superior"
 
