fix: standardize API and fix documentation inconsistencies
Address code review feedback for API consistency and documentation:

- rwa_logit: Use 'Variables' column name (matching rwa_multiregress)

- rwa_logit: Use the existing Variables variable instead of 'predictors'

- rwa_multiregress: Fix docs to reference rwa_multiregress() not rwa()

- plot_rwa: Remove lambda fallback in caption (lambda is a matrix, not scalar)

- vignette: Fix iris_logit\ to iris_logit\ (pseudo R-squared)

- test-rwa: Fix incorrect comment (logistic regression does return rsquare)

This ensures consistent API across both regression methods and accurate documentation throughout the package.

--- a/vignettes/regression-methods.Rmd
+++ b/vignettes/regression-methods.Rmd
@@ -176,7 +176,7 @@ result_logit_signed <- rwa_logit(
 )
 
 result_logit_signed$result %>%
-  select(predictors, Rescaled.RelWeight, Sign)
+  select(Variables, Rescaled.RelWeight, Sign)
 ```
 
 ## Using the `rwa()` Wrapper Function
@@ -281,7 +281,7 @@ iris_logit <- rwa_logit(
   applysigns = TRUE
 )
 
-cat("Lambda:", round(iris_logit$lambda, 4), "\n\n")
+cat("Pseudo R-squared:", round(iris_logit$rsquare, 4), "\n\n")
 iris_logit$result
 ```
 
